force-app/main/default/objects/Approval_Process_Action__c/Approval_Process_Action__c.object-meta.xml
<CustomObject>
    <label>Approval Process Action</label>
    <nameField>
        <label>Approval Process Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Process Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>