force-app/main/default/objects/Approval_Process_Action__c/fields/Action_JSON__c.field-meta.xml
<CustomField>
    <fullName>Action_JSON__c</fullName>
    <label>Action JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>