force-app/main/default/objects/Approval_Process_Action__c/fields/Is_Approved_Action__c.field-meta.xml
<CustomField>
    <fullName>Is_Approved_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approved Action</label>
    <type>Checkbox</type>
</CustomField>